{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 54,
  "lineage": "d4859105-620f-c42d-827c-eba7cc4b234d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382657791:internet-gateway/igw-06451c65d0d19cd90",
            "id": "igw-06451c65d0d19cd90",
            "owner_id": "992382657791",
            "tags": {
              "name": "full-cycle-igw"
            },
            "tags_all": {
              "name": "full-cycle-igw"
            },
            "vpc_id": "vpc-09641c142e9e0d2d1"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382657791:route-table/rtb-03b2e40486f5f3aec",
            "id": "rtb-03b2e40486f5f3aec",
            "owner_id": "992382657791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06451c65d0d19cd90",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "full-cycle-rtb"
            },
            "tags_all": {
              "Name": "full-cycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09641c142e9e0d2d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cfcd31f33caf777",
            "route_table_id": "rtb-03b2e40486f5f3aec",
            "subnet_id": "subnet-0398072bfe6c2c3a8"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0893cb1ff0eee7fa7",
            "route_table_id": "rtb-03b2e40486f5f3aec",
            "subnet_id": "subnet-0675d00a80c5a3140"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382657791:security-group/sg-066c68ea1f5030717",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066c68ea1f5030717",
            "ingress": [],
            "name": "terraform-20240909013233087400000003",
            "name_prefix": "terraform-",
            "owner_id": "992382657791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "full-cycle-sg"
            },
            "tags_all": {
              "Name": "full-cycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09641c142e9e0d2d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382657791:subnet/subnet-0398072bfe6c2c3a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0398072bfe6c2c3a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382657791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "full-cycle-subnet-0"
            },
            "tags_all": {
              "Name": "full-cycle-subnet-0"
            },
            "vpc_id": "vpc-09641c142e9e0d2d1"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382657791:subnet/subnet-0675d00a80c5a3140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0675d00a80c5a3140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382657791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "full-cycle-subnet-1"
            },
            "tags_all": {
              "Name": "full-cycle-subnet-1"
            },
            "vpc_id": "vpc-09641c142e9e0d2d1"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382657791:vpc/vpc-09641c142e9e0d2d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dd6d83d7422d79e5",
            "default_route_table_id": "rtb-0ee6be07852aef44f",
            "default_security_group_id": "sg-0db4870e47c996f22",
            "dhcp_options_id": "dopt-0775c43a698263115",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09641c142e9e0d2d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee6be07852aef44f",
            "owner_id": "992382657791",
            "tags": {
              "Name": "full-cycle-vpc"
            },
            "tags_all": {
              "Name": "full-cycle-vpc"
            }
          }
        }
      ]
    }
  ]
}